# langchain-sourcey

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/langchain/: README.md  provider-sourcey.mdx  retriever-sourcey.mdx
docs/langchain-js/: provider-sourcey.mdx  retriever-sourcey.mdx
examples/: live_quickstart.py  rag_chain.py
js/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
js/examples/: live-quickstart.ts  rag-chain.ts
js/src/: index.ts  retriever.ts
js/test/: retriever.test.ts
src/langchain_sourcey/: __init__.py  retrievers.py
tests/integration_tests/: test_live_retriever.py
tests/unit_tests/: test_parser.py  test_retriever.py
